# berlinger_fridge_tag

./: .gitignore  Dockerfile  Makefile  README.md  api.py  cli.py  compose.yml  main.py  pyproject.toml  run_api.py
.github/workflows/: docker.yml  lint.yml  test.yml
berlinger/: fridge_tag.py
berlinger_fridge_tag/: fridge_tag.py  fridge_tag_models.py
tests/: __init__.py  conftest.py  test_api.py
tests/test_data/: invalid_fridgetag.txt  minimal_fridgetag.txt
