[project]
name = "berlinger-fridge-tag"
version = "0.1.0"
description = "Python library and API for parsing Berlinger Fridge-tag temperature monitoring data files and integrating with DHIS2 cold chain monitoring systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "fastapi[standard]>=0.117.1",
    "python-multipart>=0.0.6",
    "uvicorn>=0.37.0",
    "httpx>=0.25.0",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
